--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generaterr",
   "version": "1.0.0",
-  "description": "A simple custom error generator for node.js",
+  "description": "A simple dependency free custom error generator for node.js",
   "main": "index.js",
   "repository": "git://github.com/saintedlama/generaterr.git",
   "author": "Christoph Walcher <christoph.walcher@gmail.com>",
