--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: node_js
+
+sudo: false
+
 node_js:
+  - "6"
+  - "5"
+  - "4"
+  - "0.12"
   - "0.10"
-  - "0.11"
-
-services:
-  - mongodb
-
-before_script:
-  - npm install -g istanbul
-  - npm install coveralls
-  - npm install mocha-lcov-reporter
 
 after_script:
   - NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
