--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "cross-env": "^1.0.8",
+    "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
     "shelljs": "^0.7.0"
   },
   "scripts": {
-    "test": "mocha -R spec test/",
-    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
+    "test": "cross-env NODE_ENV=test mocha -R spec test/",
+    "cover": "cross-env NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
   }
 }
